--- a/style.css
+++ b/style.css
@@ -1,14 +1,25 @@
 body {
     font-family: sans-serif;
-    background-color: #ffffff;
+    background-color: #b6fd87;
 }
 
+.navbar{
+    background-color: rgb(255, 255, 255);
+    border-radius: 20px;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+.upload{
+    width:20%;
+    opacity: 50%;
+    padding-bottom: 50px;
+}
 .file-upload {
     background-color: #f6f7fa;
     margin: 0 auto;
-    padding: 13% 3%;
-    width: 914px;
-    height: 50vw;
+    padding: 3% 3%;
+    width: 50%;
     border-radius: 10px;
     border: solid 1.5px #f6f7fa;
 
@@ -83,10 +94,10 @@ body {
 .drag-text h3 {
     font-weight: 100;
     text-transform: uppercase;
-    font-family: NanumSquareR;
+    font-family: 'HS-Regular';
     font-size: 1.5rem;
     line-height: 1.53;
-    color: #35465d;
+    color: #001104;
     width: 50%;
     margin: 0 auto;
 }
@@ -129,14 +140,6 @@ body {
     padding: 2.1% 7.7%;
 }
 
-.navbar-light .navbar-brand {
-
-    font-family: NanumSquareR;
-
-    line-height: 1.68;
-    text-align: left;
-    color: #35465d;
-}
 
 .navbar-light .navbar-toggler {
     border-color: #ffffff;
@@ -147,28 +150,33 @@ body {
 }
 
 .title {
-    font-family: NanumSquareR;
+    font-family: 'HS-Regular';
     font-size: 4rem;
     line-height: 1.67;
     text-align: center;
-    color: #34565d;
+    color: #387445;
 }
 
 .subtitle {
-    font-family: NanumSquareR;
+    font-family: 'HS-Regular';
     line-height: 1.53;
     text-align: center;
-    color: #35465d;
+    color: #834a00;
 }
 
-.navbar-brand {
+.navbar-light .navbar-brand {
+    font-family: 'HS-Regular';
+    color: #35465d;
+    text-align: left;
+    line-height: 1.68;
     display: inline-block;
     padding-top: .3125rem;
     padding-bottom: .3125rem;
-    margin-right: 1rem;
+    margin-right: 0.5rem;
     font-size: 2rem;
     white-space: nowrap;
 }
+
 
 @media screen and (max-width:600px) {
     html {
@@ -181,7 +189,7 @@ body {
 }
 
 .instagram-link {
-    font-family: NarumSquareR;
+    font-family: 'HS-Regular';
     font-size: 1rem;
     line-height: 1.71;
     text-align: center;
@@ -194,3 +202,23 @@ element.style {
     margin: 0 auto;
 }
 
+.img-area{
+    line-height:10%;
+
+}
+.instagram-icon{
+    width:2.3%;
+    vertical-align: middle;
+}
+.fiona-face{
+    width:7%;
+    vertical-align: middle;
+    padding-bottom: 15px;
+}
+
+@font-face {
+    font-family: 'HS-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/HS-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
