--- a/style.css
+++ b/style.css
@@ -3,11 +3,12 @@ body {
     background-color: #b6fd87;
 }
 
-.upload{
-    width:20%;
+.upload {
+    width: 20%;
     opacity: 50%;
     padding-bottom: 50px;
 }
+
 .file-upload {
     background-color: #cddc39;
     margin: 0 auto;
@@ -15,7 +16,7 @@ body {
     width: 50%;
     border-radius: 15px;
     border: solid 1.5px #cddc39;
-    
+
 }
 
 .file-upload-btn {
@@ -50,8 +51,8 @@ body {
     text-align: center;
 }
 
-#loading{
-    display:none;
+#loading {
+    display: none;
 }
 
 .file-upload-input {
@@ -126,7 +127,7 @@ body {
     color: #d54f00;
 }
 
-.navbar{
+.navbar {
     background-color: rgb(205 220 57);
     border-radius: 20px;
     margin-top: 10px;
@@ -161,16 +162,16 @@ body {
     border-radius: 40px;
     border: solid 1.5px #35465d;
     background-color: #1c2a3c;
-  }
-  
-  .try-again-text {
+}
+
+.try-again-text {
     font-family: 'twayair';
     display: block;
     font-size: 1.5rem;
     text-align: center;
     color: #ffffff;
     padding: 4px 15px;
-  }
+}
 
 @media screen and (max-width:600px) {
     html {
@@ -188,20 +189,22 @@ element.style {
     margin: 0 auto;
 }
 
-.fiona-images-div{
+.fiona-images-div {
     text-align: center;
     margin-top: 30px;
 }
-.fiona-images{
+
+.fiona-images {
     display: inline;
     width: 10%;
 }
-.img-area{
-    line-height:10%;
-    
+
+.img-area {
+    line-height: 10%;
+
 }
 
-.instagram-id{
+.instagram-id {
     padding-left: 0px;
 }
 
@@ -213,27 +216,28 @@ element.style {
     text-decoration: underline;
 }
 
-.instagram-icon{
-    width:4%;
+.instagram-icon {
+    width: 4%;
     vertical-align: middle;
 }
-.fiona-face{
-    width:7%;
+
+.fiona-face {
+    width: 7%;
     vertical-align: middle;
     padding-bottom: 15px;
 }
 
-.text-center{
+.text-center {
     font-family: 'LeeSeoyun';
-    font-size:1.1rem;
+    font-size: 1.1rem;
     font-weight: bold;
 }
 
-.result-message{
+.result-message {
     font-family: '1973MimiWorldR';
     font-size: 2.3rem;
-    font-weight:bold;
-    color:#dc3535;
+    font-weight: bold;
+    color: #dc3535;
 }
 
 .animal-label {
@@ -250,74 +254,82 @@ element.style {
     border-radius: 10px;
     width: 100%;
     background-color: rgba(235, 166, 190, 0.2);
-  }
-  
-  .피오나공주-bar {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 2rem;
-      border-radius: 10px;
-      background-color: rgba(235, 166, 190, 1);
-    }
-  .백설공주-bar {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 2rem;
-      border-radius: 10px;
-      background-color: rgba(235, 166, 190, 1);
-    }
-  .엘사-bar {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 2rem;
-      border-radius: 10px;
-      background-color: rgba(235, 166, 190, 1);
-    }
-  .신데렐라-bar {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 2rem;
-      border-radius: 10px;
-      background-color: rgba(235, 166, 190, 1);
-    }
-  .미녀와야수벨-bar {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 2rem;
-      border-radius: 10px;
-      background-color: rgba(235, 166, 190, 1);
-    }
-  .라푼젤-bar {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 2rem;
-      border-radius: 10px;
-      background-color: rgba(235, 166, 190, 1);
-    }
-  .인어공주-bar {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 2rem;
-      border-radius: 10px;
-      background-color: rgba(235, 166, 190, 1);
-    }
-  .쟈스민-bar {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 2rem;
-      border-radius: 10px;
-      background-color: rgba(235, 166, 190, 1);
-    }
-  @font-face {
-      font-family: 'HS-Regular';
+}
+
+.fiona-bar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 2rem;
+    border-radius: 10px;
+    background-color: rgba(235, 166, 190, 1);
+}
+
+.snowwhite-bar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 2rem;
+    border-radius: 10px;
+    background-color: rgba(235, 166, 190, 1);
+}
+
+.elsa-bar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 2rem;
+    border-radius: 10px;
+    background-color: rgba(235, 166, 190, 1);
+}
+
+.cinderella-bar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 2rem;
+    border-radius: 10px;
+    background-color: rgba(235, 166, 190, 1);
+}
+
+.bell-bar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 2rem;
+    border-radius: 10px;
+    background-color: rgba(235, 166, 190, 1);
+}
+
+.tangled-bar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 2rem;
+    border-radius: 10px;
+    background-color: rgba(235, 166, 190, 1);
+}
+
+.water-bar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 2rem;
+    border-radius: 10px;
+    background-color: rgba(235, 166, 190, 1);
+}
+
+.jasmine-bar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 2rem;
+    border-radius: 10px;
+    background-color: rgba(235, 166, 190, 1);
+}
+
+@font-face {
+    font-family: 'HS-Regular';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/HS-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
