--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ body {
     font-weight: 100;
     text-transform: uppercase;
     font-family: 'HS-Regular';
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     line-height: 1.53;
     color: #000000bf;
     width: 50%;
@@ -229,19 +229,25 @@ element.style {
 
 .text-center {
     font-family: 'LeeSeoyun';
-    font-size: 1.1rem;
+    font-size: 2rem;
+    font-weight: bold;
+}
+.text-center2 {
+    font-family: 'LeeSeoyun';
+    font-size: 2.5rem;
     font-weight: bold;
 }
 
+
 .result-message {
     font-family: '1973MimiWorldR';
-    font-size: 2.3rem;
+    font-size: 2.8rem;
     font-weight: bold;
     color: #dc3535;
 }
 
 .animal-label {
-    width: 30%;
+    width: 100%;
     text-align: left;
     height: 2rem;
 }
